syntax = "proto3";

package ntt.devices.v1alpha2;

import "edgelq-sdk/common/types/meta.proto";
import "google/api/resource.proto";

option go_package = "github.com/cloudwan/edgelq-sdk/devices/resources/v1alpha2/device_type;device_type";
option java_multiple_files = true;
option java_outer_classname = "DeviceTypeProto";
option java_package = "com.ntt.devices.pb.v1alpha2";

// DeviceType Resource
message DeviceType {
  option (google.api.resource) = {
    type : "devices.edgelq.com/DeviceType"
    pattern : "regions/{region}/deviceTypes/{device_type}"
  };

  // Name of DeviceType
  // When creating a new instance, this field is optional and if not provided,
  // it will be generated automatically. Last ID segment must conform to the
  // following regex: [a-z][a-z0-9\\-]{0,28}[a-z0-9]
  string name = 1;

  ntt.types.Meta metadata = 2;

  // Display name of Device Type
  string display_name = 3;

  Platform hardware = 4;

  Architecture architecture = 5;

  // Description of the Device Type
  string Description = 6;

  // Platform (e.g. Generic, Raspberry Pi)
  enum Platform {
    PLATFORM_UNSPECIFIED = 0;

    GENERIC = 1;

    RASPBERRY_PI = 2;
  }

  // Architecture name (e.g. amd64)
  enum Architecture {
    ARCHITECTURE_UNSPECIFIED = 0;

    AMD64 = 1;

    ARM64 = 2;
  }
}
