syntax = "proto3";

package ntt.monitoring.v3;

import "edgelq-sdk/common/rpc/status.proto";

import "edgelq-sdk/monitoring/proto/v3/common.proto";

import "edgelq-sdk/monitoring/proto/v3/time_serie.proto";

import "google/protobuf/field_mask.proto";

option java_package = "com.ntt.monitoring.pb.v3";

option java_outer_classname = "TimeSerieCustomProto";

option java_multiple_files = false;

option go_package = "github.com/cloudwan/edgelq-sdk/monitoring/client/v3/time_serie;time_serie_client";

// Request message for method [ListTimeSeries][ntt.monitoring.v3.ListTimeSeries]
message ListTimeSeriesRequest {
  // The project on which to execute the request. The format is
  // "projects/{project_id_or_number}".
  string parent = 10;

  // A monitoring filter that specifies which time
  // series should be returned.  The filter must specify a single metric type,
  // and can additionally specify metric labels and other information. For
  // example:
  //
  //     metric.type = "compute.googleapis.com/instance/cpu/usage_time" AND
  //         metric.label.instance_name = "my-instance-name"
  string filter = 2;

  // The time interval for which results should be returned. Only time series
  // that contain data points in the specified interval are included
  // in the response.
  TimeInterval interval = 4;

  // By default, the raw time series data is returned.
  // Use this field to combine multiple time series for different
  // views of the data.
  Aggregation aggregation = 5;

  // Unsupported: must be left blank. The points in each time series are
  // returned in reverse time order.
  string order_by = 6;

  // Specifies which information is returned about the time series.
  TimeSeriesView view = 7;

  // view list mask. Optimize network usage and limit returned header fields to
  // a required subset. example fields in field mask:
  // - "key": for later caching,
  // - "resource.labels.project_id", "resource.labels.instance_name", etc -
  // specific labels only
  // - "resource", "metric": all resource labels, reduced_labels and type
  // NOTE: points are added implicitly
  google.protobuf.FieldMask field_mask = 12;

  // A positive number that is the maximum number of results to return. If
  // `page_size` is empty or more than 100,000 results, the effective
  // `page_size` is 100,000 results. If `view` is set to `FULL`, this is the
  // maximum number of `Points` returned. If `view` is set to `HEADERS`, this is
  // the maximum number of `TimeSeries` returned.
  int32 page_size = 8;

  // If this field is not empty then it must contain the `nextPageToken` value
  // returned by a previous call to this method.  Using this field causes the
  // method to return additional results from the previous method call.
  string page_token = 9;
}

// Response message for method
// [ListTimeSeries][ntt.monitoring.v3.ListTimeSeries]
message ListTimeSeriesResponse {
  // One or more time series that match the filter included in the request.
  repeated TimeSerie time_series = 1;

  // If there are more results than have been returned, then this field is set
  // to a non-empty value.  To see the additional results,
  // use that value as `pageToken` in the next call to this method.
  string next_page_token = 2;

  // Query execution errors that may have caused the time series data returned
  // to be incomplete.
  repeated ntt.rpc.Status execution_errors = 3;

  // ErrorDetails is used when one of the queried regions fails to produce
  // results. It is used in execution_errors field (see subfield
  // ntt.rpc.Status.details).
  message ErrorDetails {
    // region id which failed to give results.
    string region_id = 1;
  }
}

// Request message for method
// [CreateTimeSeries][ntt.monitoring.v3.CreateTimeSeries]
message CreateTimeSeriesRequest {
  // The project on which to execute the request. The format is
  // `"projects/{project_id_or_number}"`.
  string parent = 3;

  // The new data to be added to a list of time series.
  // Adds at most one data point to each of several time series.  The new data
  // point must be more recent than any other point in its time series.  Each
  // `TimeSeries` value must fully specify a unique time series by supplying
  // all label values for the metric and the monitored resource.
  repeated TimeSerie time_series = 2;
}

// Response message for method
// [CreateTimeSeries][ntt.monitoring.v3.CreateTimeSeries]
message CreateTimeSeriesResponse {
  // Time Serie keys indexed by Create position - present only when given
  // TimeSerie didn't use Key field
  map<uint32, bytes> time_serie_keys = 11;

  // Time series that failed to be created
  repeated CreateTimeSeriesError failed_time_series = 50;
}

// Describes the result of a failed request to write data to a time series.
message CreateTimeSeriesError {
  // The time series, including the `Metric`, `MonitoredResource`,
  // and `Point`s (including timestamp and value) that resulted
  // in the error. This field provides all of the context that
  // would be needed to retry the operation.
  TimeSerie time_series = 1;

  // The status of the requested write operation.
  ntt.rpc.Status status = 2;
}
